# ttt

./: LICENSE  README.md  compose.yml  pyproject.toml  test.py
docker/api/: Dockerfile
docker/ollama/: Dockerfile
src/: main.py  routes.py
src/config/: env.py  exception_handler.py  settings.py
src/controllers/: __init__.py  chat_controller.py
src/schemas/: chat_schemas.py
src/services/: ai_service_interface.py  dummy_service.py  gemini_service.py  ollama_service.py
tests/: conftest.py  test_chat_completion.py  test_chat_validation.py  test_health.py  test_models.py
